wip
Issue: CORE-9